--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,4 +23,4 @@ importFrom(utils,head)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
-useDynLib(safir)
+useDynLib(safir3)
